--- a/project_api/package.json
+++ b/project_api/package.json
@@ -15,6 +15,7 @@
   "devDependencies": {
     "chai": "^4.2.0",
     "mocha": "^6.2.0",
-    "nodemon": "^1.19.2"
+    "nodemon": "^1.19.2",
+    "swagger-ui-express": "^4.1.1"
   }
 }
